tests/baselines/reference/assignFromBooleanInterface.errors.txt
assignFromBooleanInterface.ts(3,1): error TS2322: Type 'Boolean' is not assignable to type 'boolean'.
  'boolean' is a primitive, but 'Boolean' is a wrapper object. Prefer using 'boolean' when possible.


==== assignFromBooleanInterface.ts (1 errors) ====
    var x = true;
    var a: Boolean;
    x = a;
    ~
!!! error TS2322: Type 'Boolean' is not assignable to type 'boolean'.
!!! error TS2322:   'boolean' is a primitive, but 'Boolean' is a wrapper object. Prefer using 'boolean' when possible.
    a = x;